# elastic-agentcore

./: .env.example  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.sh
.devcontainer/: devcontainer.json
scripts/: create_api_key.py  invoke_agent.py  setup_memory.py  setup_memory_index.py
src/: config.py  elastic_mcp.py  es_memory_tools.py  main.py  memory_setup.py
